# forge

./: .gitignore  CLAUDE.md  Makefile  README.md  config.dev.toml  config.toml  pyproject.toml
.claude/: settings.json
.forgejo/: CODEOWNERS
.forgejo/workflows/: ci.yml  publish-deb.yml  publish-package.yml  release.yml
.git-hooks/: commit-msg  post-commit  post-merge  pre-commit  prepare-commit-msg
.git-templates/: commit-message.txt
debian/: changelog  control  copyright  lintian-overrides  manpage  postinst  prerm  wrapper
docs/: Makefile  api-endpoints.md  conf.py  index.rst  mcp-tools.md
features/: completion.feature  environment.py  forgejo_fixture.py  hello.feature  integration_issue.feature  integration_org.feature  integration_pr.feature  integration_release.feature  integration_repo.feature  repo_clone.feature
features/steps/: common_steps.py  hello_steps.py  integration_steps.py  repo_clone_steps.py
scripts/: cleanup-worktrees.sh  post-merge-version-bump.sh
src/forge/: __init__.py  __main__.py  cli.py  config.py  secrets.py  server.py
src/forge/forgejo/: __init__.py  client.py  context.py  exceptions.py  formatting.py
src/forge/services/: __init__.py  actions.py  auth.py  completion.py  hello.py  install.py  issue.py  org.py  package.py  pr.py  release.py  repo.py
tests/: conftest.py
tests/unit/: test_actions.py  test_auth.py  test_client.py  test_completion.py  test_config.py  test_context.py  test_formatting.py  test_hello.py  test_install.py  test_issue.py  test_org.py  test_package.py  test_pr.py  test_release.py  test_repo.py  test_secrets.py  test_server.py
