[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge"
version = "2.4.0"
description = "forge — a self-contained Forgejo CLI"
readme = "README.md"
requires-python = ">=3.14.0"
license = {text = "MIT"}
authors = [{name = "Brian Payne", email = "bwpayne@gmail.com"}]

dependencies = [
    "click>=8.4.0",
    "fastmcp>=3.4.0",
    "structlog>=26.1.0",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",

    "pytest-bdd>=7.0",
    "behave>=1.2.6",


    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-click>=6.0",

    "ruff>=0.8.0",
    "mypy>=1.0",
    "httpx>=0.27.0",
    "asciinema>=2.4.0",
]

[project.scripts]
forge = "forge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "--strict-markers -v --cov=src/forge --cov-report=term-missing"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "bdd: BDD feature tests",
]

[tool.coverage.run]
source = ["src/forge"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
warn_return_any = false
disallow_subclassing_any = false
